# lilds

./: .gitignore  CMakeLists.txt  README.md  example.sublime-build  example.sublime-project  lilds.sln  lilds.vcxproj  lilds.vcxproj.filters
docs/: example.sublime-project
src/: helpers.cpp  helpers.h  math.cpp  math.h
src/app/: main.cpp
src/app/frontend/: frontend.cpp  frontend.h
src/core/: ds.cpp  ds.h
src/core/arm/: arm.cpp  arm.h  memory.h  memory.inl  waitstates.inl
src/core/arm/interpreter/: alu.cpp  alu.inl  arm32.cpp  condition_codes.cpp  decode.cpp  interpreter.h  mul.cpp  mul.inl  thumb16.cpp
src/core/bus/: bus.cpp  bus.h  io.cpp  io.h  io.inl  load_rom.cpp  read_write.inl  vram_banks.cpp  vram_banks.h
src/core/joypad/: joypad.cpp  joypad.h
